# Memorial

./: .gitignore  CMakeLists.txt  README.md  dd.yml  main.cpp
include/memorial/: FindByYear.h  ParsePassport.h  SoldierEntry.h  Vedomost.h  VedomostSearcher.h
include/memorial/cxxopts/: cxxopts.h
include/memorial/upload/: Upload.h
inludes/memorial/: ParseRegistry.h  RegisterEntry.h  RegistryStorage.h
input/: pass_260944577.xlsx  pass_89503005 (1).xlsx  pass_89503005.xlsx  passport_original.xlsx  vedomost.xlsx  vedomost_new.xlsx
input/old/: pass_260941315.xlsx  pass_260944577.xlsx  passport_new.xlsx
input/old_2/veds/: ved_2255826.xlsx  ved_2895626.xlsx  ved_3031703_1.xlsx  ved_3031703_2.xlsx  ved_3031703_3.xlsx  ved_4573952.xlsx  ved_50458885.xlsx  ved_50458887.xlsx
input/ved/: ved_2455249_1.xlsx  ved_2895626.xlsx  ved_3031703_3.xlsx
input/ved_correct/: ved_ 2455249_2.xlsx  ved_2058626.xlsx  ved_2255826.xlsx  ved_2255876.xlsx  ved_3031703_1.xlsx  ved_3031703_2.xlsx  ved_3031703_3 (6).xlsx  ved_4573952.xlsx  ved_50458885.xlsx  ved_50458887.xlsx
input/veds/: ved_2255876.xlsx
tests/: google_tests.cpp
